@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-04T01:41:03Z",
-  "count" : 2,
+  "timestamp" : "2022-09-17T08:20:26Z",
+  "count" : 1,
   "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -0, +2 ],
-  "uniques" : 2,
+  "count_decinc" : [ -1, +2 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "uniques_decinc" : [ -1, +2 ]
 }
