@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2022-09-16T16:23:01Z",
+  "timestamp" : "2022-09-17T08:20:26Z",
   "count_outdated" : 523,
   "uniques_outdated" : 302,
   "count" : 552,
@@ -7,9 +7,9 @@
   "clones" : [
     {
       "timestamp": "2022-09-03T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "uniques": 2,
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
     {
@@ -86,6 +86,13 @@
       "timestamp": "2022-09-16T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
