@@ -4,8 +4,8 @@
   "clones": [
     {
       "timestamp": "2022-09-03T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-09-05T00:00:00Z",
@@ -60,6 +60,11 @@
     {
       "timestamp": "2022-09-16T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-09-17T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
