@@ -1,3 +1,11 @@
+2022-09-17T08:20:26Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3072681452
+* notice: last 14d: unq all: 6 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 302 523 / 318 552
+* notice: next accum: outdated-unq outdated-all / unq all: 302 523 / 318 552
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-03 2022-09-17]
+
 2022-09-16T16:23:01Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3069279693
 * notice: last 14d: unq all: 6 29
